#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(NAT3, 0.1a, eoster@cs.ucla.edu)
AC_CONFIG_SRCDIR([src/nat3d.cc])
AC_CONFIG_HEADER([src/config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
dnl AC_CHECK_LIB(rdnsD_lib, some_function_in_your_lib)
AC_CHECK_LIB(pcap, pcap_sendpacket,  ,echo "Could not find pcap from the TCPDUMP package. Please check at http://www.tcpdump.org/"; exit 1)


# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)


# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T
AC_C_CONST
AC_C_CHAR_UNSIGNED
AC_TYPE_OFF_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd mkdir select socket strdup strerror strstr uname)

AC_OUTPUT(Makefile src/Makefile)
